--- a/works/mediatheque/bibliothecaire/templates/bibliothecaire/emprunts/emprunt_form.html
+++ b/works/mediatheque/bibliothecaire/templates/bibliothecaire/emprunts/emprunt_form.html
@@ -1,6 +1,13 @@
 {% extends "bibliothecaire/_base.html" %}
 {% block content %}
   <h2>Créer un emprunt</h2>
+
+  {% if is_from_membre %}
+    <div id="emprunt_membre_info" class="info" style="margin-top: 20px; padding: 0.5rem">
+        <p>Ce formulaire permet de créer un emprunt pour <strong>ce membre</strong>. Veuillez sélectionner un média <strong>en gestion et disponible</strong>.</p>
+    </div>
+  {% endif %}
+
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
@@ -13,7 +20,6 @@
         </ul>
     {% endif %}
 
-
     <div style="margin-top: 20px;">
        <button type="submit">Valider l'emprunt</button>
         |
@@ -21,6 +27,5 @@
         |
        <a href="{% url 'bibliothecaire:accueil' %}">Retour à l'accueil</a>
     </div>
-
   </form>
 {% endblock %}
