--- a/works/mediatheque/bibliothecaire/templates/bibliothecaire/emprunts/emprunt_form.html
+++ b/works/mediatheque/bibliothecaire/templates/bibliothecaire/emprunts/emprunt_form.html
@@ -1,6 +1,10 @@
 {% extends "bibliothecaire/_base.html" %}
 {% block content %}
-  <h2>Créer un emprunt</h2>
+  {% if is_rendre %}
+    <h2>Rendre un emprunt</h2>
+  {% else %}
+    <h2>Créer un emprunt</h2>
+  {% endif %}
 
   {% if is_from_membre %}
     <div id="emprunt_membre_info" class="info" style="margin-top: 20px; padding: 0.5rem">
@@ -12,8 +16,6 @@
         <p>Ce formulaire permet de créer un emprunt pour <strong>ce média</strong>. Veuillez sélectionner un membre <strong>abonné et autorisé à emprunter</strong>.</p>
     </div>
   {% endif %}
-
-
 
   <form method="post">
     {% csrf_token %}
@@ -28,11 +30,39 @@
     {% endif %}
 
     <div style="margin-top: 20px;">
-       <button type="submit">Valider l'emprunt</button>
+       <button type="submit">Valider {% if is_rendre %}le retour{% else %}l'emprunt{% endif %} </button>
         |
        <a href="{% url 'bibliothecaire:emprunt_list' %}">Retour à la liste des emprunts</a>
         |
        <a href="{% url 'bibliothecaire:accueil' %}">Retour à l'accueil</a>
     </div>
+
+    {% if is_rendre %}
+        <script>
+          document.addEventListener("DOMContentLoaded", function () {
+            const empruntSelect = document.getElementById("id_emprunt");
+            const mediaSelect = document.getElementById("id_media");
+            const emprunteurSelect = document.getElementById("id_emprunteur");
+
+            const empruntData = {
+              {% for emprunt in form.fields.emprunt.queryset %}
+                "{{ emprunt.id }}": {
+                  "media": "{{ emprunt.media.id }}",
+                  "emprunteur": "{{ emprunt.emprunteur.id }}"
+                },
+              {% endfor %}
+            };
+
+            empruntSelect.addEventListener("change", function () {
+              const selected = empruntSelect.value;
+              if (empruntData[selected]) {
+                mediaSelect.value = empruntData[selected].media;
+                emprunteurSelect.value = empruntData[selected].emprunteur;
+              }
+            });
+          });
+        </script>
+    {% endif %}
+
   </form>
 {% endblock %}
