--- a/works/mediatheque/bibliothecaire/templates/bibliothecaire/accueil.html
+++ b/works/mediatheque/bibliothecaire/templates/bibliothecaire/accueil.html
@@ -51,6 +51,8 @@
       <tr><td>Membres enregistrés</td><td>{{ nb_membres_total }}</td></tr>
       <tr><td>— emprunteurs</td><td>{{ nb_membres_emprunteurs }}</td></tr>
       <tr><td>— supprimés</td><td>{{ nb_membres_supprimes }}</td></tr>
+      <tr><td>Jeux enregistrés</td><td>{{ nb_jeux_total }}</td></tr>
+      <tr><td>— consultables</td><td>{{ nb_jeux_consultables }}</td></tr>
     </tbody>
   </table>
 {% endblock %}
