--- a/works/mediatheque/bibliothecaire/templates/bibliothecaire/_base.html
+++ b/works/mediatheque/bibliothecaire/templates/bibliothecaire/_base.html
@@ -42,7 +42,7 @@
                     <li>
                       <strong>Aller à l'accueil :</strong>
                       <ul>
-                        <li><a href="#">Médiathèque</a></li>
+                        <li><a href="{% url 'accounts:accueil' %}">Médiathèque</a></li>
                         <li><a href="{% url 'bibliothecaire:accueil' %}">Bibliothécaire</a></li>
                         <li><a href="{% url 'consultation:accueil' %}">Consultation</a></li>
                       </ul>
